     flags, can be disabled with --disable-strict-compilation.
   * the hardcoded resolution list now also includes tiny gui and small gui
     resolutions if compiled with those switches
   * learn the underlaying terrain so you'll not have a blank like in the unit
     stats if you encounter a terain aliased to a unencountered terrain

Version 1.4:
 * language and i18n:
   * new translation: traditional Chinese
   * updated translations: Catalan, Chinese, Czech, Danish, Dutch, Esperanto,
     Finnish, French, German, Hungarian, Japanese, Lithuanian, Polish, Russian,
     Slovak, Spanish, Turkish, Valencian
 * graphics:
   * more elvish portraits
 * multiplayer:
   * revised maps: Cynsaun Battlefield
   * messages will no longer default to the private channel when observing
     or joining a new game
   * fixed an invalid vector access, which could happen since linger mode
     didn't reset the player_numer_ (bug #11094)
   * random maps can no longer crash if two teams have the same starting
     position (that happened if 2 teams didn't get a starting position.)
     bug #11166.
   * when the number of players for a random map can't be placed the engine
     tries maximal ten times before giving up.
 * sound:
   * added new music track, "Knalgan Theme" by Ryan Reilly.
   * added new music track, "The King is Dead" by Mattias Westlund.
   * updated music track, "Traveling Minstrels" by Mattias Westlund.
   * changed the default story screen music from loyalists.ogg to revelation.ogg
   * added new music track, "Nunc Dimittis" by Jeremy Nicoll.
   * added new music track, "The City Falls" by Doug Kaufman.
 * WML engine:
   * fixed a bug where addons with recusive INCLUDES could no longer be loaded
     (bug #11160)
 * miscellaneous and bug fixes:
   * units with a death sound but no death animation now play their death
     sound correctly
   * selection animations are not directional when standing animations are
     disabled (bug #11151)